Still trying to fix pom.xml version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,8 @@ jobs:
         with:
           java-version: '17'
           distribution: 'corretto'
-      - name: Replace version number in pom.xml
-        run: |
-          sed -i "s/<version>1.0.0-SNAPSHOT<\/version>/<version>${{ env.GITHUB_REF }}</version>/" pom.xml
+      - name: Update version in pom.xml (Release only)
+        run: mvn -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
@@ -57,7 +56,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
               latest
-              ${{ env.GITHUB_REF }}
+              ${{ github.event.release.tag_name }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
